[package]
name = "libpotato"
version = "0.1.0"
authors = ["wisatong <wisa.pow@gmail.com>"]
edition = "2018"

[dependencies]
nix = "0.20.0"
libc = "0.2.92"
rtnetlink = "0.7.0"
futures = "0.3.14"
ipnetwork = "0.18.0"
tokio = { version = "1.0.1", features = ["rt-multi-thread"]}
lazy_static = "1.4.0"
signal-hook = "0.3.8"
